--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>珠峰培训</title>
+    <title>腾讯看比赛</title>
     <meta name="keywords" content=""/>
     <meta name="description" content=""/>
     <link type="icon/x-icon" rel="icon" href="img/icon-logo.png">
